--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -3,40 +3,62 @@ android:layout_width="fill_parent"
 android:layout_height="?android:attr/listPreferredItemHeight"
 android:padding="6dip" >
 
-<ImageView
-    android:id="@+id/icon"
-    android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentTop="true"
-    android:layout_marginRight="6dip"
-    android:contentDescription="TODO"
-    android:src="@drawable/ic_launcher_background" />
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="6dip"
+        android:contentDescription="TODO"
+        android:src="@drawable/ic_launcher_background" />
 
-<TextView
-    android:id="@+id/secondLine"
-    android:layout_width="fill_parent"
-    android:layout_height="26dip"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:layout_toRightOf="@id/icon"
-    android:ellipsize="marquee"
-    android:text="Description"
-    android:textSize="12sp"
-    android:singleLine="true" />
+    <TextView
+        android:id="@+id/secondLine"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="104dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toRightOf="@id/icon"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:text="Description"
+        android:textSize="12sp" />
 
-<TextView
-    android:id="@+id/firstLine"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_above="@id/secondLine"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentTop="true"
-    android:layout_alignWithParentIfMissing="true"
-    android:layout_toRightOf="@id/icon"
-    android:gravity="center_vertical"
-    android:text="Example application"
-    android:textSize="16sp" />
+    <TextView
+        android:id="@+id/price_row"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
+        android:layout_below="@+id/firstLine"
+        android:layout_alignStart="@+id/secondLine"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="187dp"
+        android:layout_marginLeft="193dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toRightOf="@id/icon"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:text="Price"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/firstLine"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_above="@id/secondLine"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@id/icon"
+        android:gravity="center_vertical"
+        android:text="title"
+        android:textSize="16sp" />
 
 </RelativeLayout>
 
