--- a/app/src/main/res/layout/content_add_product.xml
+++ b/app/src/main/res/layout/content_add_product.xml
@@ -52,7 +52,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
+            app:srcCompat="@android:drawable/ic_menu_camera"
+            android:onClick="getCaptureImage"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
