added notifications when new products are added this also notifies for new products when modifying or deleting products but we dont mind currently. new service class to listen on messages from firebase

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,6 +13,13 @@
         android:title="Add Product"
         app:showAsAction="never" />
     <item
+        android:id="@+id/subscribe"
+        android:orderInCategory="100"
+        android:title="Notifications"
+        app:showAsAction="never"
+        />
+
+    <item
         android:id="@+id/exit"
         android:orderInCategory="100"
         android:title="Exit"
